@@ -1,0 +1,93 @@
+#!/usr/bin/perl -w
+# -*- mode: perl; -*-
+# $Id: buildinfo.pl,v 1.1 2019/04/24 23:40:43 cvsuser Exp $
+# buildinfo generation
+#
+# Copyright Adam Young 2018-2019
+#
+
+use strict;
+use warnings 'all';
+use Getopt::Long;
+use POSIX qw(strftime);
+
+my $output  = "buildinfo.h";
+my $package = undef;
+my $name    = undef;
+my $version = "0.0.1";
+my $date    = undef;
+my $build   = "1";
+my $help    = 0;
+
+Usage() if (0 == GetOptions(
+		'output=s'  => \$output,
+		'package=s' => \$package,
+		'name=s'    => \$name,
+		'version=s' => \$version,
+		'date=i'    => \$date,
+		'build=i'   => \$build,
+		'help'      => \$help)
+                    || $help);
+
+$package = "MC-WIN32" if (! $package);
+$name    = "Midnight Commander WIN32" if (! $name);
+$version = "0.0.1" if (! $version);
+$date    = strftime('%Y%m%d', localtime) if (! $date);
+
+Generate();
+
+sub
+Generate	#()
+{
+	open(FILE, ">${output}") or
+		die "cannot create <${output}> : $!\n";
+
+	my ($version1, $version2, $version3) =
+		split(/\./, $version);
+
+	$version2 = 0 if (! $version2);
+	$version3 = 0 if (! $version3);
+
+	print FILE <<"EOT";
+// Auto-generated by Makefile
+#define PACKAGE "${package}"
+#define PACKAGE_NAME "${name}"
+#define VERSION "${version}"
+#define VERSION_1 ${version1}
+#define VERSION_2 ${version2}
+#define VERSION_3 ${version3}
+#define BUILD_DATE "${date}"
+#define BUILD_NUMBER "${build}"
+EOT
+
+	close(FILE);
+}
+
+
+sub
+Usage		# ([message])
+{
+	print "\nbuildinfo.h @_\n\n" if (@_);
+	print <<EOU;
+
+Usage: perl buildinfo.pl [options]
+
+Options:
+    --output <file>         Output file.
+    --package <package>     Package label.
+    --name <name>           Package name.
+    --version <version>     Package version.
+    --date <date>           Build date.
+    --build <number>        Build number.
+
+    --help                  Help.
+
+EOU
+	exit 3;
+}
+
+1;
+
+#end
+
+
